Add simple terminal splitter

--- a/meson.build
+++ b/meson.build
@@ -8,6 +8,8 @@ sloked_src = [
   'src/screen/posix-term/PosixTerminal.cpp',
   'src/screen/term-multiplexer/TerminalWindow.cpp',
   'src/screen/term-multiplexer/TerminalBuffer.cpp',
+  'src/screen/term-multiplexer/TerminalScreenView.cpp',
+  'src/screen/term-multiplexer/TerminalSplitter.cpp',
   'src/main.cpp',
   'src/core/Error.cpp',
   'src/core/NewLine.cpp',
