Add graphic widget abstraction, refactor code

--- a/meson.build
+++ b/meson.build
@@ -5,16 +5,23 @@ if meson.get_compiler('cpp').get_id() == 'gcc' or meson.get_compiler('cpp').get_
 endif
 
 sloked_src = [
-  'src/screen/posix-term/PosixTerminal.cpp',
-  'src/screen/term-multiplexer/TerminalWindow.cpp',
-  'src/screen/term-multiplexer/TerminalBuffer.cpp',
-  'src/screen/term-multiplexer/TerminalSplitter.cpp',
-  'src/screen/term-multiplexer/TerminalTabber.cpp',
+  'src/screen/terminal/posix/PosixTerminal.cpp',
+  'src/screen/terminal/multiplexer/TerminalWindow.cpp',
+  'src/screen/terminal/multiplexer/TerminalBuffer.cpp',
+  'src/screen/terminal/multiplexer/TerminalSplitter.cpp',
+  'src/screen/terminal/multiplexer/TerminalTabber.cpp',
+  'src/screen/terminal/screen/ComponentHandle.cpp',
+  'src/screen/terminal/screen/TextPaneComponent.cpp',
+  'src/screen/terminal/screen/SplitterComponent.cpp',
+  'src/screen/terminal/screen/TabberComponent.cpp',
+  'src/screen/terminal/screen/TextPane.cpp',
   'src/main.cpp',
   'src/core/Error.cpp',
   'src/core/NewLine.cpp',
   'src/core/Encoding.cpp',
-  'src/screen/CharWidth.cpp',
+  'src/screen/terminal/CharWidth.cpp',
+  'src/screen/Component.cpp',
+  'src/screen/Splitter.cpp',
   'src/text/TextBlock.cpp',
   'src/text/TextChunk.cpp',
   'src/text/posix/TextFile.cpp',
