Implement simple namespacing system

--- a/meson.build
+++ b/meson.build
@@ -10,13 +10,16 @@ sloked_src = [
   'src/core/Error.cpp',
   'src/core/NewLine.cpp',
   'src/core/Position.cpp',
-  'src/filesystem/File.cpp',
   'src/filesystem/FileIO.cpp',
   'src/filesystem/posix/File.cpp',
   'src/filesystem/posix/FileIO.cpp',
   'src/filesystem/posix/Reader.cpp',
   'src/filesystem/posix/View.cpp',
   'src/filesystem/posix/Writer.cpp',
+  'src/namespace/Filesystem.cpp',
+  'src/namespace/Object.cpp',
+  'src/namespace/Path.cpp',
+  'src/namespace/posix/Filesystem.cpp',
   'src/screen/Component.cpp',
   'src/screen/Splitter.cpp',
   'src/screen/terminal/CharWidth.cpp',
