Refactor text framing into separate class

--- a/meson.build
+++ b/meson.build
@@ -6,6 +6,7 @@ endif
 
 sloked_src = [
   'src/main.cpp',
+  'src/core/CharWidth.cpp',
   'src/core/Encoding.cpp',
   'src/core/Error.cpp',
   'src/core/NewLine.cpp',
@@ -25,7 +26,6 @@ sloked_src = [
   'src/namespace/posix/Filesystem.cpp',
   'src/screen/Component.cpp',
   'src/screen/Splitter.cpp',
-  'src/screen/terminal/CharWidth.cpp',
   'src/screen/terminal/multiplexer/TerminalWindow.cpp',
   'src/screen/terminal/multiplexer/TerminalBuffer.cpp',
   'src/screen/terminal/multiplexer/TerminalSplitter.cpp',
@@ -38,10 +38,11 @@ sloked_src = [
   'src/screen/terminal/screen/TextPane.cpp',
   'src/screen/widgets/TextEditor.cpp',
   'src/text/TextBlock.cpp',
-  'src/text/TextChunk.cpp',
   'src/text/TextBlockHandle.cpp',
-  'src/text/TextRegion.cpp',
+  'src/text/TextChunk.cpp',
   'src/text/TextDocument.cpp',
+  'src/text/TextFrame.cpp',
+  'src/text/TextRegion.cpp',
   'src/text/TextView.cpp',
   'src/text/cursor/Cursor.cpp',
   'src/text/cursor/EditingPrimitives.cpp',
