--- a/meson.build
+++ b/meson.build
@@ -17,6 +17,9 @@ sloked_src = [
   'src/filesystem/posix/Reader.cpp',
   'src/filesystem/posix/View.cpp',
   'src/filesystem/posix/Writer.cpp',
+  'src/json/AST.cpp',
+  'src/json/Lexer.cpp',
+  'src/json/Parser.cpp',
   'src/namespace/Directory.cpp',
   'src/namespace/Filesystem.cpp',
   'src/namespace/Object.cpp',
