Start implementation of internal message-exchange system

--- a/meson.build
+++ b/meson.build
@@ -25,6 +25,10 @@ sloked_src = [
   'src/json/Parser.cpp',
   'src/kgr/Serialize.cpp',
   'src/kgr/Value.cpp',
+  'src/kgr/local/Context.cpp',
+  'src/kgr/local/ContextManager.cpp',
+  'src/kgr/local/Pipe.cpp',
+  'src/kgr/local/Server.cpp',
   'src/namespace/Directory.cpp',
   'src/namespace/Filesystem.cpp',
   'src/namespace/Object.cpp',
