Split text editor service into two separate services for editing and rendering

--- a/meson.build
+++ b/meson.build
@@ -51,8 +51,9 @@ sloked_src = [
   'src/screen/terminal/components/TextPane.cpp',
   'src/screen/terminal/components/TextPaneComponent.cpp',
   'src/screen/widgets/TextEditor.cpp',
+  'src/services/Cursor.cpp',
   'src/services/Service.cpp',
-  'src/services/TextEditor.cpp',
+  'src/services/TextRender.cpp',
   'src/text/TextBlock.cpp',
   'src/text/TextBlockHandle.cpp',
   'src/text/TextChunk.cpp',
