--- a/meson.build
+++ b/meson.build
@@ -55,6 +55,7 @@ sloked_src = [
   'src/screen/terminal/components/TextPaneComponent.cpp',
   'src/screen/widgets/TextEditor.cpp',
   'src/services/Cursor.cpp',
+  'src/services/DocumentSet.cpp',
   'src/services/Service.cpp',
   'src/services/TextRender.cpp',
   'src/text/TextBlock.cpp',
