Implement editor tabbing mechanism

--- a/meson.build
+++ b/meson.build
@@ -15,15 +15,16 @@ sloked_src = [
   'src/core/encoding/Utf8.cpp',
   'src/core/encoding/Utf32LE.cpp',
   'src/demo/main.cpp',
+  'src/editor/Document.cpp',
+  'src/editor/DocumentSet.cpp',
+  'src/editor/DocumentUpstream.cpp',
+  'src/editor/Tabs.cpp',
   'src/filesystem/FileIO.cpp',
   'src/filesystem/posix/File.cpp',
   'src/filesystem/posix/FileIO.cpp',
   'src/filesystem/posix/Reader.cpp',
   'src/filesystem/posix/View.cpp',
   'src/filesystem/posix/Writer.cpp',
-  'src/editor/Document.cpp',
-  'src/editor/DocumentSet.cpp',
-  'src/editor/DocumentUpstream.cpp',
   'src/json/AST.cpp',
   'src/json/Lexer.cpp',
   'src/json/Parser.cpp',
