--- a/meson.build
+++ b/meson.build
@@ -57,6 +57,7 @@ sloked_src = [
   'src/screen/terminal/components/TextPane.cpp',
   'src/screen/terminal/components/TextPaneComponent.cpp',
   'src/screen/widgets/TextEditor.cpp',
+  'src/services/ScreenInput.cpp',
   'src/services/Cursor.cpp',
   'src/services/DocumentSet.cpp',
   'src/services/Screen.cpp',
