Implement basic socket interface

--- a/meson.build
+++ b/meson.build
@@ -12,6 +12,7 @@ sloked_src = [
   'src/core/Locale.cpp',
   'src/core/NewLine.cpp',
   'src/core/Position.cpp',
+  'src/core/Scope.cpp',
   'src/core/encoding/Utf8.cpp',
   'src/core/encoding/Utf32LE.cpp',
   'src/demo/main.cpp',
@@ -34,6 +35,7 @@ sloked_src = [
   'src/kgr/local/NamedServer.cpp',
   'src/kgr/local/Pipe.cpp',
   'src/kgr/local/Server.cpp',
+  'src/kgr/net/PosixSocket.cpp',
   'src/namespace/Directory.cpp',
   'src/namespace/Filesystem.cpp',
   'src/namespace/Find.cpp',
