--- a/meson.build
+++ b/meson.build
@@ -35,7 +35,6 @@ sloked_src = [
   'src/kgr/local/NamedServer.cpp',
   'src/kgr/local/Pipe.cpp',
   'src/kgr/local/Server.cpp',
-  'src/kgr/net/PosixSocket.cpp',
   'src/namespace/Directory.cpp',
   'src/namespace/Filesystem.cpp',
   'src/namespace/Find.cpp',
@@ -44,6 +43,7 @@ sloked_src = [
   'src/namespace/View.cpp',
   'src/namespace/Virtual.cpp',
   'src/namespace/posix/Filesystem.cpp',
+  'src/net/PosixSocket.cpp',
   'src/screen/Component.cpp',
   'src/screen/ComponentTree.cpp',
   'src/screen/Splitter.cpp',
