--- a/meson.build
+++ b/meson.build
@@ -37,6 +37,7 @@ sloked_src = [
   'src/kgr/local/Server.cpp',
   'src/kgr/net/Interface.cpp',
   'src/kgr/net/MasterServer.cpp',
+  'src/kgr/net/SlaveServer.cpp',
   'src/namespace/Directory.cpp',
   'src/namespace/Filesystem.cpp',
   'src/namespace/Find.cpp',
