Implement configuration file loading

--- a/meson.build
+++ b/meson.build
@@ -20,6 +20,7 @@ sloked_src = [
   'src/core/encoding/Utf8.cpp',
   'src/core/encoding/Utf32LE.cpp',
   'src/demo/main.cpp',
+  'src/editor/Configuration.cpp',
   'src/editor/Tabs.cpp',
   'src/editor/doc-mgr/Document.cpp',
   'src/editor/doc-mgr/DocumentSet.cpp',
@@ -33,6 +34,7 @@ sloked_src = [
   'src/json/AST.cpp',
   'src/json/Lexer.cpp',
   'src/json/Parser.cpp',
+  'src/kgr/Path.cpp',
   'src/kgr/Serialize.cpp',
   'src/kgr/Value.cpp',
   'src/kgr/local/Context.cpp',
