Implemented simple timer-based scheduler

--- a/meson.build
+++ b/meson.build
@@ -10,7 +10,6 @@ sloked_src = [
   'src/core/DynamicBitset.cpp',
   'src/core/Encoding.cpp',
   'src/core/Error.cpp',
-  'src/core/EventLoop.cpp',
   'src/core/Locale.cpp',
   'src/core/Logger.cpp',
   'src/core/NewLine.cpp',
@@ -55,6 +54,8 @@ sloked_src = [
   'src/namespace/posix/Filesystem.cpp',
   'src/net/CryptoSocket.cpp',
   'src/net/PosixSocket.cpp',
+  'src/sched/EventLoop.cpp',
+  'src/sched/Timer.cpp',
   'src/screen/Component.cpp',
   'src/screen/ComponentTree.cpp',
   'src/screen/Splitter.cpp',
