Refactor polling mechanism into separate module

--- a/meson.build
+++ b/meson.build
@@ -19,6 +19,8 @@ sloked_src = [
   'src/core/String.cpp',
   'src/core/encoding/Utf8.cpp',
   'src/core/encoding/Utf32LE.cpp',
+  'src/core/awaitable/Poll.cpp',
+  'src/core/awaitable/Posix.cpp',
   'src/demo/main.cpp',
   'src/editor/Configuration.cpp',
   'src/editor/doc-mgr/Document.cpp',
@@ -52,7 +54,6 @@ sloked_src = [
   'src/namespace/Virtual.cpp',
   'src/namespace/posix/Filesystem.cpp',
   'src/net/CryptoSocket.cpp',
-  'src/net/Poll.cpp',
   'src/net/PosixSocket.cpp',
   'src/sched/EventLoop.cpp',
   'src/sched/Scheduler.cpp',
