Implemented basic scheduler bindings to Lua

--- a/meson.build
+++ b/meson.build
@@ -100,6 +100,7 @@ sloked_src = [
   'src/third-party/script/lua/Common.cpp',
   'src/third-party/script/lua/Lua.cpp',
   'src/third-party/script/lua/Pipe.cpp',
+  'src/third-party/script/lua/Sched.cpp',
   'src/third-party/script/lua/Server.cpp'
 ]
 
