--- a/meson.build
+++ b/meson.build
@@ -50,8 +50,10 @@ sloked_src = [
   'src/namespace/Find.cpp',
   'src/namespace/Object.cpp',
   'src/namespace/Path.cpp',
+  'src/namespace/Resolve.cpp',
   'src/namespace/View.cpp',
   'src/namespace/Virtual.cpp',
+  'src/namespace/posix/Environment.cpp',
   'src/namespace/posix/Filesystem.cpp',
   'src/net/CryptoSocket.cpp',
   'src/net/PosixSocket.cpp',
