Refactor screen subsystem

--- a/meson.build
+++ b/meson.build
@@ -7,6 +7,7 @@ endif
 sloked_src = [
   'src/core/CharWidth.cpp',
   'src/core/CLI.cpp',
+  'src/core/Closeable.cpp',
   'src/core/DynamicBitset.cpp',
   'src/core/Encoding.cpp',
   'src/core/Error.cpp',
@@ -24,9 +25,11 @@ sloked_src = [
   'src/core/awaitable/Posix.cpp',
   'src/demo/main.cpp',
   'src/editor/Configuration.cpp',
+  'src/editor/ScreenServer.cpp',
   'src/editor/doc-mgr/Document.cpp',
   'src/editor/doc-mgr/DocumentSet.cpp',
   'src/editor/doc-mgr/DocumentUpstream.cpp',
+  'src/editor/terminal/ScreenProvider.cpp',
   'src/filesystem/FileIO.cpp',
   'src/filesystem/posix/File.cpp',
   'src/filesystem/posix/FileIO.cpp',
