Refactor editor initialization

--- a/meson.build
+++ b/meson.build
@@ -26,6 +26,7 @@ sloked_src = [
   'src/demo/main.cpp',
   'src/editor/Configuration.cpp',
   'src/editor/EditorCore.cpp',
+  'src/editor/EditorServer.cpp',
   'src/editor/ScreenServer.cpp',
   'src/editor/doc-mgr/Document.cpp',
   'src/editor/doc-mgr/DocumentSet.cpp',
