--- a/meson.build
+++ b/meson.build
@@ -18,6 +18,7 @@ sloked_src = [
   'src/core/Scope.cpp',
   'src/core/Semaphore.cpp',
   'src/core/String.cpp',
+  'src/core/ThreadPool.cpp',
   'src/core/URI.cpp',
   'src/core/encoding/Utf8.cpp',
   'src/core/encoding/Utf32LE.cpp',
