--- a/meson.build
+++ b/meson.build
@@ -65,6 +65,7 @@ sloked_src = [
   'src/namespace/posix/Environment.cpp',
   'src/namespace/posix/Filesystem.cpp',
   'src/net/CryptoSocket.cpp',
+  'src/net/Socket.cpp',
   'src/net/PosixSocket.cpp',
   'src/sched/EventLoop.cpp',
   'src/sched/Scheduler.cpp',
@@ -83,7 +84,7 @@ sloked_src = [
   'src/screen/terminal/components/TextPane.cpp',
   'src/screen/terminal/components/TextPaneComponent.cpp',
   'src/screen/widgets/TextEditor.cpp',
-  'src/security/Auth.cpp',
+  'src/security/Master.cpp',
   'src/services/ScreenInput.cpp',
   'src/services/Cursor.cpp',
   'src/services/DocumentNotify.cpp',
