Add basic PGI C++ support

--- a/meson.build
+++ b/meson.build
@@ -1,7 +1,11 @@
 project('sloked', 'cpp', 'c', default_options : ['cpp_std=c++17', 'warning_level=3'])
 
-if meson.get_compiler('cpp').get_id() == 'gcc' or meson.get_compiler('cpp').get_id() == 'clang'
+compiler_id = meson.get_compiler('cpp').get_id()
+if compiler_id == 'gcc' or compiler_id == 'clang'
   add_project_arguments('-Wno-unused-parameter', '-pedantic', language : 'cpp')
+elif compiler_id == 'pgi'
+  add_project_arguments('-std=c++17', '-noswitcherror', language : 'cpp')
+  add_project_link_arguments('-noswitcherror', language : 'cpp')
 endif
 
 sloked_src = [
