--- a/meson.build
+++ b/meson.build
@@ -79,6 +79,8 @@ sloked_src = [
   'src/screen/Component.cpp',
   'src/screen/ComponentTree.cpp',
   'src/screen/Splitter.cpp',
+  'src/screen/terminal/TerminalResize.cpp',
+  'src/screen/terminal/TerminalSize.cpp',
   'src/screen/terminal/multiplexer/TerminalWindow.cpp',
   'src/screen/terminal/multiplexer/TerminalBuffer.cpp',
   'src/screen/terminal/multiplexer/TerminalSplitter.cpp',
@@ -96,6 +98,7 @@ sloked_src = [
   'src/security/Restriction.cpp',
   'src/security/Slave.cpp',
   'src/services/ScreenInput.cpp',
+  'src/services/ScreenSize.cpp',
   'src/services/Cursor.cpp',
   'src/services/DocumentNotify.cpp',
   'src/services/DocumentSet.cpp',
