--- a/components/platform/posix/meson.build
+++ b/components/platform/posix/meson.build
@@ -12,8 +12,10 @@ posix_platform_src = [
 ]
 
 ncurses = dependency('ncurses')
+sloked_posix_platform_flags = '-DSLOKED_PLATFORM_POSIX'
 sloked_posix_platform_lib = static_library('sloked_posix_platform', posix_platform_src,
   include_directories : include_directories('headers'),
+  cpp_args: sloked_posix_platform_flags,
   dependencies : [ncurses, sloked_framework])
 sloked_posix_platform = declare_dependency(link_with : sloked_posix_platform_lib,
   include_directories : include_directories('headers'))
