Move platform-specific initialization to compat component

--- a/components/demo/meson.build
+++ b/components/demo/meson.build
@@ -5,8 +5,7 @@ demo_src = [
 
 demo_editor_flags = []
 demo_editor_flags += sloked_compat_flags
-demo_editor_flags += sloked_platform_flags
 
 demo_editor = executable('sloked', demo_src,
   cpp_args : demo_editor_flags,
-  dependencies : [sloked_framework, sloked_compat, sloked_platform])
+  dependencies : [sloked_framework, sloked_compat])
