Implement a set of facade classes for application initialization

--- a/components/framework/meson.build
+++ b/components/framework/meson.build
@@ -28,6 +28,10 @@ sloked_src = [
   'src/editor/doc-mgr/DocumentSet.cpp',
   'src/editor/doc-mgr/DocumentUpstream.cpp',
   'src/editor/terminal/ScreenProvider.cpp',
+  'src/facade/Crypto.cpp',
+  'src/facade/Server.cpp',
+  'src/facade/Services.cpp',
+  'src/facade/Network.cpp',
   'src/filesystem/FileIO.cpp',
   'src/json/AST.cpp',
   'src/json/Lexer.cpp',
