--- a/components/framework/meson.build
+++ b/components/framework/meson.build
@@ -22,8 +22,8 @@ sloked_src = [
   'src/editor/Configuration.cpp',
   'src/editor/EditorApp.cpp',
   'src/editor/EditorServer.cpp',
+  'src/editor/Manager.cpp',
   'src/editor/ScreenServer.cpp',
-  'src/editor/Startup.cpp',
   'src/editor/doc-mgr/Document.cpp',
   'src/editor/doc-mgr/DocumentSet.cpp',
   'src/editor/doc-mgr/DocumentUpstream.cpp',
