--- a/components/script/lua/meson.build
+++ b/components/script/lua/meson.build
@@ -10,12 +10,12 @@ lua_bindings_src = [
 
 lua = dependency('lua', required : false)
 if not lua.found()
-	lua = dependency('lua-5.3')
+	lua = dependency('lua-5.3', required : true)
 endif
 sloked_lua_bindings_flags = ['-DSLOKED_FEATURE_SCRIPTING', '-DSLOKED_FEATURE_SCRIPTING_LUA']
 sloked_lua_bindings_lib = static_library('sloked_lua', lua_bindings_src,
   cpp_args : sloked_lua_bindings_flags,
   include_directories : include_directories('headers'),
   dependencies : [lua, sloked_framework])
-sloked_lua_bindings = declare_dependency(link_with : sloked_lua_bindings_lib,
-  include_directories : include_directories('headers'))
+sloked_lua_bindings = [declare_dependency(link_with : sloked_lua_bindings_lib,
+  include_directories : include_directories('headers')), lua]
