--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,2 +1,2 @@
-option('crypto_botan', type: 'boolean', value: 'true')
+option('crypto', type: 'string', value: 'openssl')
 option('scripting_lua', type: 'boolean', value: 'true')
