--- a/meson.build
+++ b/meson.build
@@ -31,6 +31,9 @@ if get_option('scripting_lua')
   sloked_scripting_flags = sloked_lua_bindings_flags
   sloked_disable_scripting = false
 endif
+if get_option('terminal') == 'sdl'
+  subdir('components/ui-sdl')
+endif
 
 sloked_platform = sloked_posix_platform
 sloked_platform_flags = sloked_posix_platform_flags
